# guppy-docs

./: .gitignore  README.md  justfile  package-lock.json  pyproject.toml
.github/workflows/: add-to-project.yml  docs.yml
landing/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
landing/src/app/: page.tsx
landing/src/app/_components/: GuppyLogo.tsx
landing/src/components/code_snippet/: CopyButton.tsx  index.tsx  styles.css
landing/src/routes/: __root.tsx  index.tsx
landing/src/styles/: globals.css
sphinx/: conf.py  examples_index.md  faqs.md  getting_started.md  index.md  migration_guide.md  v1_changelog.md  v1_migration.md
sphinx/_templates/autosummary/: class.rst
sphinx/_templates/sidebar/: brand.html
sphinx/api/: api_index.md  decorator.md  defs.md  emulator.md  experimental.md  library.md  optimizer.md  std.md
sphinx/language_guide/: comptime.md  control_flow.md  functions.md  language_guide_index.md  libraries.md  measurement.md  modifiers.md  ownership.md  python_differences.md  random.md  static.md  type_arg_syntax.md
sphinx/language_guide/data_types/: aliases.md  angles.md  arrays.md  structs.md  tuples.md  types_index.md
sphinx/language_guide/modifiers/: 1control.md  2dagger.md  3functions.md  control.md  dagger.md  example.md  functions.md  main_page.md
